more files added

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,17 @@
 !/*.md
 !/.gitignore
 !/_common.sh
+!/acpi.sh
 !/brightness.sh
-!/i3launcher.sh
 !/get-edid.py
+!/i3launcher.sh
+!/i3master
 !/pingnet.sh
 !/reload_yubi.sh
 !/rofi_wifi.sh
 !/screenlock.sh
-!/xss-dim
 !/screenshot.sh
 !/sleep.sh
 !/sys.sh
 !/rofi_emoji.sh
+!/xss-dim
